text wrap fix

--- a/src/routes/Partners/components/partners.scss
+++ b/src/routes/Partners/components/partners.scss
@@ -1,4 +1,7 @@
 #partners-page {
+    .twitch-link {
+        word-wrap: break-word;
+    }
     .twitch {
         & > h1 {
             border-bottom: 1px solid $black-border;
